<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.parentsFragments.info.UpdateAccountFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_leftBack"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/left_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/updateAccount"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/areYou"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_father"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/bg_select_gender"
                    android:padding="3dp"
                    android:src="@drawable/dad" />

                <TextView
                    android:id="@+id/tv_nameFather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_father"
                    android:layout_alignStart="@+id/iv_father"
                    android:layout_alignEnd="@+id/iv_father"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/father"
                    android:textColor="#2196F3"
                    android:textSize="@dimen/_18ssp" />


                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_father"
                    android:layout_alignBottom="@id/iv_father"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_toEndOf="@+id/iv_father"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_mother"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_toEndOf="@+id/tv_or"
                    android:background="@drawable/bg_select_gender_default"
                    android:padding="3dp"
                    android:src="@drawable/mother" />

                <TextView
                    android:id="@+id/tv_nameMother"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_mother"
                    android:layout_alignStart="@+id/iv_mother"
                    android:layout_alignEnd="@+id/iv_mother"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/mother"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:text="@string/fatherMotherName"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/et_parentsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_parents_name"
                android:hint="@string/enterName"
                android:text="محمد"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:textSize="@dimen/_15ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:id="@+id/selectCountry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_select_country"
                android:elevation="@dimen/_3sdp"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp">

                <com.hbb20.CountryPickerView
                    android:id="@+id/countryPicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/light"
                android:text="@string/birthDate"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:id="@+id/selectYearBirth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_parents_name"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_6sdp">

                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_6sdp"
                    android:text="@string/birthDate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_arrow_down" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_Save_ParentData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_btn_parent_data"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progressBar_updateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:elevation="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/loading" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>