<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.parentsFragments.GetToKnowTheAppFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/left_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/knowApp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_160sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/home_logo" />

            <kr.co.prnd.readmore.ReadMoreTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appInfo"
                android:textSize="@dimen/_20ssp"
                app:lineHeight="@dimen/_28ssp"
                app:readMoreMaxLine="6"
                android:layout_marginTop="@dimen/_30sdp"
                app:readMoreColor="#56B8E4"
                app:readMoreText="@string/read_more"
                android:textColor="@color/black"
                android:gravity="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>